Made some big changes to project styles, much more closely matches the design document now, also added more images to the assets folder, waiting on a placeholder image for other projects. Next I need to figure out a solution for squashed images as well as fixing the wordcloud.

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,18 @@
   font-family: 'Goldman', cursive;
 }
 
+h1, h2{
+  color: #D3C422;
+}
+
 a{
   text-decoration: none;
   margin-right: 3%;
   margin-top: 2%;
-  color: wheat;
+  color: #C8A659;
 }
 a:hover{
-  color: #D3C422;
+  color: #93032E;
 }
 
 nav {
